Fri Mar 30 14:15:58 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/ExecutionManager/Execution_Manager.cpp
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp
        
          Removed emulated exceptions since they are no
          longer supported. Also removed the exception
          specification in the c++ mapping of IDL operation
          since they are obsolete.
        
Thu Mar 29 15:22:08 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/ExecutionManager/Execution_Manager.cpp
        
          Created a child POA which is configured with
          Client_Propagated Priority Model.
        
        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
        * DAnCE/ExecutionManager/Execution_Manager_Impl.h
        * DAnCE/ExecutionManager/ExecutionManager.mpc
        
          Added a get_current_thread_priority() to get the
          priority of the current thread. Also added 
          debug_level control so the thread priority could
          be printed out.
        
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc
        
          Added two new methods. 
          The is_client_propagated_model() checks whether
          the ExecutionManager exposes the CLIENT_PROPAGATED
          priority model. The set_current_priority() method
          will set the client thread priority if the priority
          model is CLIENT_PROPAGATED on the EM side.

        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.h
        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp
        