@@ -1,3 +1,12 @@
+Fri Mar 30 18:05:06 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.cpp
+        * DAnCE/Plan_Launcher/Plan_Launcher_Benchmark_Impl.h
+        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
+        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
+        
+          Added virtual destructors into the class.
+
 Fri Mar 30 14:15:58 UTC 2007  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DAnCE/ExecutionManager/Execution_Manager.cpp
